syntax = "proto3";

option go_package = ".;pb_auth";

service NotifyAuth {
  rpc JoinPublication (JoinPublicationRequest) returns (Response);
  rpc LeavePublication (LeavePublicationRequest) returns (Response);
  rpc ChangeSubscriberSubscription (ChangeSubscriberSubscriptionRequest) returns (Response);

  rpc ConfirmPublisherSubscription (ConfirmPublisherSubscriptionRequest) returns (Response);
  rpc RevokePublisherSubscription (RevokePublisherSubscriptionRequest) returns (Response);
  rpc ChangePublisherSubscription (ChangePublisherSubscriptionRequest) returns (Response);
}

message Response {
  bool is_success = 1;
}

message JoinPublicationRequest {
  int32 user_id = 1;
  int32 publication_id = 2;
  bool is_premium = 3;
}

message LeavePublicationRequest {
  int32 user_id = 1;
  int32 publication_id = 2;
}

message ChangeSubscriberSubscriptionRequest {
  int32 user_id = 1;
  int32 publication_id = 2;
}

message ConfirmPublisherSubscriptionRequest {
  int32 user_id = 1;
  int32 plan_id = 2;
}

message RevokePublisherSubscriptionRequest {
  int32 user_id = 1;
  int32 plan_id = 2;
}

message ChangePublisherSubscriptionRequest {
  int32 user_id = 1;
  int32 plan_id = 2;
}